--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,7 @@
 <resources>
     <string name="app_name">M2P</string>
     <string name="action_settings">Settings</string>
+    <string name="card_number">Card number</string>
+    <string name="exp_date">Exp. date</string>
+    <string name="cvv">CVV</string>
 </resources>
