--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="card_number">Card number</string>
     <string name="exp_date">Exp. date</string>
     <string name="cvv">CVV</string>
+    <string name="next">Next</string>
 </resources>
