--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,5 +20,8 @@
     <string name="card_number">Card number</string>
     <string name="exp_date">Exp. date</string>
     <string name="cvv">CVV</string>
+    <string name="new_card">New card</string>
     <string name="next">Next</string>
+    <string name="save">Save</string>
+    <string name="create">Create</string>
 </resources>
