--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,5 @@
     <string name="next">Next</string>
     <string name="save">Save</string>
     <string name="create">Create</string>
+    <string name="balance_format">Balance: %1$.2f €</string>
 </resources>
