--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,6 @@
     <string name="save">Save</string>
     <string name="create">Create</string>
     <string name="balance_format">Balance: %1$.2f €</string>
+    <string name="retry">Retry</string>
+    <string name="error">Error</string>
 </resources>
