--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-  ~ Copyright (c) 2016. Manuel Rebollo Báez.
+  ~ Copyright (c) 2017. Manuel Rebollo Báez
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
   ~ you may not use this file except in compliance with the License.
@@ -16,17 +16,16 @@
   -->
 
 <resources>
-    <string name="app_name">M2P Balance</string>
-    <string name="action_settings">Settings</string>
-    <string name="card_number">Card number</string>
+    <string name="app_name">Saldo M2P</string>
+    <string name="action_settings">Ajustes</string>
+    <string name="card_number">Número de tarjeta</string>
     <string name="exp_date">Exp. date</string>
     <string name="cvv">CVV</string>
-    <string name="new_card">New card</string>
-    <string name="next">Next</string>
-    <string name="save">Save</string>
-    <string name="create">Create</string>
-    <string name="balance_format" translatable="false">%1$.2f €</string>
-    <string name="retry">Retry</string>
+    <string name="new_card">Nueva tarjeta</string>
+    <string name="next">Siguiente</string>
+    <string name="save">Guardar</string>
+    <string name="create">Crear</string>
+    <string name="retry">Reintentar</string>
     <string name="error">Error</string>
-    <string name="balance">Balance</string>
+    <string name="balance">Saldo</string>
 </resources>
