--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -32,4 +32,7 @@
     <string name="error_card_expired">Tarjeta caducada</string>
     <string name="error_invalid_month">Mes no válido</string>
     <string name="invalid_card">Tarjeta no válida</string>
+    <string name="remove_credit_card_error">Error al eliminar la tarjeta</string>
+    <string name="remove_credit_card">Eliminar tarjeta</string>
+    <string name="lock_view_info_text">Introduce tu CVV para comprobar el saldo de tu tarjeta o eliminala para introducir una tarjeta nueva</string>
 </resources>
