--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,5 +36,5 @@
     <string name="remove_credit_card_error">Error deleting card</string>
     <string name="remove_credit_card">Remove Credit Card</string>
     <string name="lock_view_info_text">Enter your CVV to check credit card balance or remove to insert new card</string>
-    <string name="date_format" translatable="false">%1$te/%1$tB/%1$tY</string>
+    <string name="date_format" translatable="false">%1$te %1$tB %1$tY</string>
 </resources>
