--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,7 +16,7 @@
   -->
 
 <resources>
-    <string name="app_name">M2P Balance</string>
+    <string name="app_name">Restaurant Balance</string>
     <string name="action_settings">Settings</string>
     <string name="card_number">Card number</string>
     <string name="exp_date">Exp. date</string>
